--- a/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
+++ b/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
@@ -68,6 +68,8 @@
      "text": [
       "Found 3788 images belonging to 2 classes.\n",
       "Found 945 images belonging to 2 classes.\n",
+      "Found 945 images belonging to 2 classes.\n",
+      "Found 1184 images belonging to 2 classes.\n",
       "Found 1184 images belonging to 2 classes.\n"
      ]
     }
@@ -139,19 +141,25 @@
     "# Create the optimizer with the learning rate schedule\n",
     "optimizer = tf.keras.optimizers.Adam(learning_rate=lr_schedule)\n",
     "\n",
-    "# Applied dropout layers to reduce overfitting\n",
+    "# Apply L2 regularization and stronger dropout (SpatialDropout2D for conv blocks)\n",
+    "l2_reg = tf.keras.regularizers.l2(1e-4)\n",
+    "\n",
     "model = models.Sequential([\n",
-    "    layers.Conv2D(32, (3, 3), activation='relu', input_shape=(IMG_SIZE[0], IMG_SIZE[1], 3)),\n",
+    "    layers.Conv2D(32, (3, 3), activation='relu', kernel_regularizer=l2_reg, input_shape=(IMG_SIZE[0], IMG_SIZE[1], 3)),\n",
     "    layers.MaxPooling2D(2, 2),\n",
-    "    # layers.Dropout(0.25),\n",
-    "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "    layers.SpatialDropout2D(0.2),\n",
+    "\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu', kernel_regularizer=l2_reg),\n",
     "    layers.MaxPooling2D(2, 2),\n",
-    "    # layers.Dropout(0.25),\n",
-    "    layers.Conv2D(128, (3, 3), activation='relu'),\n",
+    "    layers.SpatialDropout2D(0.2),\n",
+    "\n",
+    "    layers.Conv2D(128, (3, 3), activation='relu', kernel_regularizer=l2_reg),\n",
     "    layers.MaxPooling2D(2, 2),\n",
+    "    layers.SpatialDropout2D(0.2),\n",
+    "\n",
     "    layers.Flatten(),\n",
-    "    layers.Dense(128, activation='relu'),\n",
-    "    # layers.Dropout(0.5),\n",
+    "    layers.Dense(128, activation='relu', kernel_regularizer=l2_reg),\n",
+    "    layers.Dropout(0.5),\n",
     "    layers.Dense(1, activation='sigmoid')\n",
     "])"
    ]
@@ -179,25 +187,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 395ms/step - accuracy: 0.7365 - loss: 0.5256 - val_accuracy: 0.8455 - val_loss: 0.3826\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 264ms/step - accuracy: 0.5993 - loss: 0.6922 - val_accuracy: 0.7672 - val_loss: 0.5301\n",
       "Epoch 2/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 225ms/step - accuracy: 0.8178 - loss: 0.4077 - val_accuracy: 0.8381 - val_loss: 0.3830\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 264ms/step - accuracy: 0.5993 - loss: 0.6922 - val_accuracy: 0.7672 - val_loss: 0.5301\n",
+      "Epoch 2/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.7606 - loss: 0.5369 - val_accuracy: 0.8317 - val_loss: 0.4255\n",
       "Epoch 3/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 230ms/step - accuracy: 0.8379 - loss: 0.3711 - val_accuracy: 0.9069 - val_loss: 0.2496\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.7606 - loss: 0.5369 - val_accuracy: 0.8317 - val_loss: 0.4255\n",
+      "Epoch 3/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 270ms/step - accuracy: 0.8017 - loss: 0.4787 - val_accuracy: 0.8635 - val_loss: 0.3610\n",
       "Epoch 4/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 250ms/step - accuracy: 0.8551 - loss: 0.3275 - val_accuracy: 0.9037 - val_loss: 0.2917\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 270ms/step - accuracy: 0.8017 - loss: 0.4787 - val_accuracy: 0.8635 - val_loss: 0.3610\n",
+      "Epoch 4/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 274ms/step - accuracy: 0.8049 - loss: 0.4777 - val_accuracy: 0.8772 - val_loss: 0.3619\n",
       "Epoch 5/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 247ms/step - accuracy: 0.8801 - loss: 0.2924 - val_accuracy: 0.8984 - val_loss: 0.2486\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 274ms/step - accuracy: 0.8049 - loss: 0.4777 - val_accuracy: 0.8772 - val_loss: 0.3619\n",
+      "Epoch 5/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.8147 - loss: 0.4549 - val_accuracy: 0.8667 - val_loss: 0.3536\n",
       "Epoch 6/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 236ms/step - accuracy: 0.8735 - loss: 0.2916 - val_accuracy: 0.9132 - val_loss: 0.2116\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.8147 - loss: 0.4549 - val_accuracy: 0.8667 - val_loss: 0.3536\n",
+      "Epoch 6/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 277ms/step - accuracy: 0.8258 - loss: 0.4359 - val_accuracy: 0.9005 - val_loss: 0.2913\n",
       "Epoch 7/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 252ms/step - accuracy: 0.8801 - loss: 0.2838 - val_accuracy: 0.9164 - val_loss: 0.2023\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 277ms/step - accuracy: 0.8258 - loss: 0.4359 - val_accuracy: 0.9005 - val_loss: 0.2913\n",
+      "Epoch 7/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 275ms/step - accuracy: 0.8424 - loss: 0.4161 - val_accuracy: 0.8878 - val_loss: 0.3338\n",
       "Epoch 8/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 254ms/step - accuracy: 0.8997 - loss: 0.2518 - val_accuracy: 0.9228 - val_loss: 0.2103\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 275ms/step - accuracy: 0.8424 - loss: 0.4161 - val_accuracy: 0.8878 - val_loss: 0.3338\n",
+      "Epoch 8/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 269ms/step - accuracy: 0.8442 - loss: 0.4079 - val_accuracy: 0.9143 - val_loss: 0.2962\n",
       "Epoch 9/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 238ms/step - accuracy: 0.9047 - loss: 0.2251 - val_accuracy: 0.9407 - val_loss: 0.1598\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 269ms/step - accuracy: 0.8442 - loss: 0.4079 - val_accuracy: 0.9143 - val_loss: 0.2962\n",
+      "Epoch 9/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 282ms/step - accuracy: 0.8572 - loss: 0.3917 - val_accuracy: 0.9164 - val_loss: 0.2502\n",
       "Epoch 10/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 230ms/step - accuracy: 0.9092 - loss: 0.2197 - val_accuracy: 0.9291 - val_loss: 0.1914\n"
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 282ms/step - accuracy: 0.8572 - loss: 0.3917 - val_accuracy: 0.9164 - val_loss: 0.2502\n",
+      "Epoch 10/10\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 296ms/step - accuracy: 0.8453 - loss: 0.4007 - val_accuracy: 0.9079 - val_loss: 0.2830\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 296ms/step - accuracy: 0.8453 - loss: 0.4007 - val_accuracy: 0.9079 - val_loss: 0.2830\n"
      ]
     }
    ],
@@ -220,8 +247,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 470ms/step - accuracy: 0.9079 - loss: 0.2185\n",
-      "Test Accuracy: 0.9079391956329346\n"
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 145ms/step - accuracy: 0.8733 - loss: 0.3375\n",
+      "Test Accuracy: 0.8733108043670654\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 145ms/step - accuracy: 0.8733 - loss: 0.3375\n",
+      "Test Accuracy: 0.8733108043670654\n"
      ]
     }
    ],
@@ -252,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "45472d3e",
    "metadata": {},
    "outputs": [],
@@ -274,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b340f1d2",
    "metadata": {},
    "outputs": [
@@ -282,17 +311,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 66ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 96ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 96ms/step\n",
       "Prediction: Chihuahua (confidence: 1.00)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 68ms/step\n",
-      "Prediction: Chihuahua (confidence: 0.99)\n"
+      "Prediction: Chihuahua (confidence: 1.00)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 84ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.98)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 84ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.98)\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
     "predict_image(\"./predict/predict_1.jpg\")\n",
-    "predict_image(\"./predict/predict_2.jpg\")"
+    "predict_image(\"./predict/predict_4.jpeg\")"
    ]
   }
  ],
