feat: added cat vs dog binary classification

--- a/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
+++ b/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
@@ -39,8 +39,8 @@
    "source": [
     "# DATASET DIRECTORY CONFIGURATION\n",
     "# Download and unzip the dataset from Kaggle, set the directory paths accordingly.\n",
-    "train_dir = \"./train\"  # e.g. './muffin-vs-chihuahua/train'\n",
-    "test_dir = \"./test\"    # e.g. './muffin-vs-chihuahua/test'"
+    "train_dir = \"./train_catdog\"  # e.g. './muffin-vs-chihuahua/train'\n",
+    "test_dir = \"./test_catdog\"    # e.g. './muffin-vs-chihuahua/test'"
    ]
   },
   {
@@ -66,11 +66,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3788 images belonging to 2 classes.\n",
-      "Found 945 images belonging to 2 classes.\n",
-      "Found 945 images belonging to 2 classes.\n",
-      "Found 1184 images belonging to 2 classes.\n",
-      "Found 1184 images belonging to 2 classes.\n"
+      "Found 10002 images belonging to 2 classes.\n",
+      "Found 2500 images belonging to 2 classes.\n",
+      "Found 2500 images belonging to 2 classes.\n",
+      "Found 2000 images belonging to 2 classes.\n",
+      "Found 2000 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -187,44 +187,46 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 264ms/step - accuracy: 0.5993 - loss: 0.6922 - val_accuracy: 0.7672 - val_loss: 0.5301\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 399ms/step - accuracy: 0.5158 - loss: 0.7201 - val_accuracy: 0.5648 - val_loss: 0.7061\n",
       "Epoch 2/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 264ms/step - accuracy: 0.5993 - loss: 0.6922 - val_accuracy: 0.7672 - val_loss: 0.5301\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 399ms/step - accuracy: 0.5158 - loss: 0.7201 - val_accuracy: 0.5648 - val_loss: 0.7061\n",
       "Epoch 2/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.7606 - loss: 0.5369 - val_accuracy: 0.8317 - val_loss: 0.4255\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 168ms/step - accuracy: 0.5309 - loss: 0.7024 - val_accuracy: 0.5832 - val_loss: 0.6742\n",
       "Epoch 3/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.7606 - loss: 0.5369 - val_accuracy: 0.8317 - val_loss: 0.4255\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 168ms/step - accuracy: 0.5309 - loss: 0.7024 - val_accuracy: 0.5832 - val_loss: 0.6742\n",
       "Epoch 3/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 270ms/step - accuracy: 0.8017 - loss: 0.4787 - val_accuracy: 0.8635 - val_loss: 0.3610\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 157ms/step - accuracy: 0.5841 - loss: 0.6852 - val_accuracy: 0.6416 - val_loss: 0.6737\n",
       "Epoch 4/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 270ms/step - accuracy: 0.8017 - loss: 0.4787 - val_accuracy: 0.8635 - val_loss: 0.3610\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 157ms/step - accuracy: 0.5841 - loss: 0.6852 - val_accuracy: 0.6416 - val_loss: 0.6737\n",
       "Epoch 4/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 274ms/step - accuracy: 0.8049 - loss: 0.4777 - val_accuracy: 0.8772 - val_loss: 0.3619\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 165ms/step - accuracy: 0.6201 - loss: 0.6664 - val_accuracy: 0.6780 - val_loss: 0.6184\n",
       "Epoch 5/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 274ms/step - accuracy: 0.8049 - loss: 0.4777 - val_accuracy: 0.8772 - val_loss: 0.3619\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 165ms/step - accuracy: 0.6201 - loss: 0.6664 - val_accuracy: 0.6780 - val_loss: 0.6184\n",
       "Epoch 5/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.8147 - loss: 0.4549 - val_accuracy: 0.8667 - val_loss: 0.3536\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 167ms/step - accuracy: 0.6397 - loss: 0.6472 - val_accuracy: 0.6572 - val_loss: 0.6418\n",
       "Epoch 6/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 263ms/step - accuracy: 0.8147 - loss: 0.4549 - val_accuracy: 0.8667 - val_loss: 0.3536\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 167ms/step - accuracy: 0.6397 - loss: 0.6472 - val_accuracy: 0.6572 - val_loss: 0.6418\n",
       "Epoch 6/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 277ms/step - accuracy: 0.8258 - loss: 0.4359 - val_accuracy: 0.9005 - val_loss: 0.2913\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6400 - loss: 0.6533 - val_accuracy: 0.6776 - val_loss: 0.6130\n",
       "Epoch 7/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 277ms/step - accuracy: 0.8258 - loss: 0.4359 - val_accuracy: 0.9005 - val_loss: 0.2913\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6400 - loss: 0.6533 - val_accuracy: 0.6776 - val_loss: 0.6130\n",
       "Epoch 7/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 275ms/step - accuracy: 0.8424 - loss: 0.4161 - val_accuracy: 0.8878 - val_loss: 0.3338\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6563 - loss: 0.6367 - val_accuracy: 0.6896 - val_loss: 0.5996\n",
       "Epoch 8/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 275ms/step - accuracy: 0.8424 - loss: 0.4161 - val_accuracy: 0.8878 - val_loss: 0.3338\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6563 - loss: 0.6367 - val_accuracy: 0.6896 - val_loss: 0.5996\n",
       "Epoch 8/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 269ms/step - accuracy: 0.8442 - loss: 0.4079 - val_accuracy: 0.9143 - val_loss: 0.2962\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 156ms/step - accuracy: 0.6620 - loss: 0.6319 - val_accuracy: 0.6816 - val_loss: 0.6031\n",
       "Epoch 9/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 269ms/step - accuracy: 0.8442 - loss: 0.4079 - val_accuracy: 0.9143 - val_loss: 0.2962\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 156ms/step - accuracy: 0.6620 - loss: 0.6319 - val_accuracy: 0.6816 - val_loss: 0.6031\n",
       "Epoch 9/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 282ms/step - accuracy: 0.8572 - loss: 0.3917 - val_accuracy: 0.9164 - val_loss: 0.2502\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 155ms/step - accuracy: 0.6702 - loss: 0.6226 - val_accuracy: 0.7132 - val_loss: 0.5839\n",
       "Epoch 10/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 282ms/step - accuracy: 0.8572 - loss: 0.3917 - val_accuracy: 0.9164 - val_loss: 0.2502\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 155ms/step - accuracy: 0.6702 - loss: 0.6226 - val_accuracy: 0.7132 - val_loss: 0.5839\n",
       "Epoch 10/10\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 296ms/step - accuracy: 0.8453 - loss: 0.4007 - val_accuracy: 0.9079 - val_loss: 0.2830\n",
-      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 296ms/step - accuracy: 0.8453 - loss: 0.4007 - val_accuracy: 0.9079 - val_loss: 0.2830\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 155ms/step - accuracy: 0.6802 - loss: 0.6127 - val_accuracy: 0.7124 - val_loss: 0.5930\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 155ms/step - accuracy: 0.6802 - loss: 0.6127 - val_accuracy: 0.7124 - val_loss: 0.5930\n",
+      "{'cat': 0, 'dog': 1}\n",
+      "{'cat': 0, 'dog': 1}\n"
      ]
     }
    ],
@@ -234,7 +236,9 @@
     "    train_generator,\n",
     "    epochs=10,\n",
     "    validation_data=val_generator\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(train_generator.class_indices)"
    ]
   },
   {
@@ -247,10 +251,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 145ms/step - accuracy: 0.8733 - loss: 0.3375\n",
-      "Test Accuracy: 0.8733108043670654\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 145ms/step - accuracy: 0.8733 - loss: 0.3375\n",
-      "Test Accuracy: 0.8733108043670654\n"
+      "\u001b[1m63/63\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 261ms/step - accuracy: 0.7145 - loss: 0.5648\n",
+      "Test Accuracy: 0.7145000100135803\n",
+      "\u001b[1m63/63\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 261ms/step - accuracy: 0.7145 - loss: 0.5648\n",
+      "Test Accuracy: 0.7145000100135803\n"
      ]
     }
    ],
@@ -276,7 +280,8 @@
    ],
    "source": [
     "# SAVE THE MODEL\n",
-    "model.save('muffin_vs_chihuahua_cnn.h5')"
+    "# model.save('muffin_vs_chihuahua_cnn.h5')\n",
+    "model.save('exercise_6_catdog_ledesma.h5')"
    ]
   },
   {
@@ -291,19 +296,25 @@
     "# to access the preprocessing utilities to avoid static import resolution issues.\n",
     "image = tf.keras.preprocessing.image\n",
     "\n",
-    "def predict_image(img_path, model_path='muffin_vs_chihuahua_cnn.h5'):\n",
+    "def predict_image(img_path, model_path='exercise_6_catdog_ledesma.h5'):\n",
     "    model = tf.keras.models.load_model(model_path, compile=False)\n",
     "    img = image.load_img(img_path, target_size=IMG_SIZE)\n",
     "    img_array = image.img_to_array(img) / 255.0\n",
     "    img_array = np.expand_dims(img_array, axis=0)\n",
     "    pred = model.predict(img_array)[0,0]\n",
-    "    label = \"Chihuahua\" if pred >= 0.5 else \"Muffin\"\n",
-    "    print(f\"Prediction: {label} (confidence: {pred:.2f})\")\n"
+    "    \n",
+    "    # Updated for cat vs dog classification\n",
+    "    label = \"Dog\" if pred >= 0.5 else \"Cat\"\n",
+    "    print(f\"Prediction: {label} (confidence: {pred:.2f})\")\n",
+    "    \n",
+    "    # Old muffin vs chihuahua version:\n",
+    "    # label = \"Chihuahua\" if pred >= 0.5 else \"Muffin\"\n",
+    "    # print(f\"Prediction: {label} (confidence: {pred:.2f})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b340f1d2",
    "metadata": {},
    "outputs": [
@@ -311,21 +322,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 96ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 96ms/step\n",
-      "Prediction: Chihuahua (confidence: 1.00)\n",
-      "Prediction: Chihuahua (confidence: 1.00)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 84ms/step\n",
-      "Prediction: Chihuahua (confidence: 0.98)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 84ms/step\n",
-      "Prediction: Chihuahua (confidence: 0.98)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
+      "Prediction: Dog (confidence: 0.58)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+      "Prediction: Dog (confidence: 0.82)\n",
+      "Prediction: Dog (confidence: 0.58)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+      "Prediction: Dog (confidence: 0.82)\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
-    "predict_image(\"./predict/predict_1.jpg\")\n",
-    "predict_image(\"./predict/predict_4.jpeg\")"
+    "predict_image(\"./predict/predict_cat.jpg\")\n",
+    "predict_image(\"./predict/predict_dog.jpg\")"
    ]
   }
  ],
