fix: label layout; it is dependent on class indices (important)

--- a/CS 3B/ALLYN_RALF_LEDESMA/exercise_6_trained_resnet.ipynb
+++ b/CS 3B/ALLYN_RALF_LEDESMA/exercise_6_trained_resnet.ipynb
@@ -484,7 +484,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
+   "id": "72c08590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chihuahua': 0, 'muffin': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is important to map the predicted class indices back to class labels\n",
+    "print(train_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "47f75ca0",
    "metadata": {},
    "outputs": [],
@@ -500,13 +519,16 @@
     "    img_array = image.img_to_array(img) / 255.0\n",
     "    img_array = np.expand_dims(img_array, axis=0)\n",
     "    pred = model.predict(img_array)[0,0]    \n",
-    "    label = \"Chihuahua\" if pred >= 0.5 else \"Muffin\"\n",
+    "\n",
+    "    # Since train_generator.class_indices is {'chihuahua': 0, 'muffin': 1}\n",
+    "    # my label layout should be:\n",
+    "    label = \"Muffin\" if pred >= 0.5 else \"Chihuahua\"\n",
     "    print(f\"Prediction: {label} (confidence: {pred:.2f})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "4970b4a3",
    "metadata": {},
    "outputs": [
@@ -514,30 +536,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 947ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 947ms/step\n",
-      "Prediction: Chihuahua (confidence: 0.99)\n",
-      "Prediction: Chihuahua (confidence: 0.99)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
-      "Prediction: Chihuahua (confidence: 0.98)\n",
-      "Prediction: Chihuahua (confidence: 0.98)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n",
-      "Prediction: Chihuahua (confidence: 0.97)\n",
-      "Prediction: Chihuahua (confidence: 0.97)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 928ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 928ms/step\n",
-      "Prediction: Muffin (confidence: 0.39)\n",
-      "Prediction: Muffin (confidence: 0.39)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 943ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 943ms/step\n",
-      "Prediction: Muffin (confidence: 0.36)\n",
-      "Prediction: Muffin (confidence: 0.36)\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 984ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 984ms/step\n",
-      "Prediction: Muffin (confidence: 0.02)\n",
-      "Prediction: Muffin (confidence: 0.02)\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 930ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 930ms/step\n",
+      "Prediction: Muffin (confidence: 0.99)\n",
+      "Prediction: Muffin (confidence: 0.99)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 914ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 914ms/step\n",
+      "Prediction: Muffin (confidence: 0.98)\n",
+      "Prediction: Muffin (confidence: 0.98)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 933ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 933ms/step\n",
+      "Prediction: Muffin (confidence: 0.97)\n",
+      "Prediction: Muffin (confidence: 0.97)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 909ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 909ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.39)\n",
+      "Prediction: Chihuahua (confidence: 0.39)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 968ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 968ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.36)\n",
+      "Prediction: Chihuahua (confidence: 0.36)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 927ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 927ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.02)\n",
+      "Prediction: Chihuahua (confidence: 0.02)\n"
      ]
     }
    ],
