fix(label): the original (pre resnet implmentation) muffin vs chihuahua model. Same issue previously, in the label. (Corrected label layout based on class indices)

--- a/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
+++ b/CS 3B/ALLYN_RALF_LEDESMA/muffin_vs_chihuahua.ipynb
@@ -39,8 +39,14 @@
    "source": [
     "# DATASET DIRECTORY CONFIGURATION\n",
     "# Download and unzip the dataset from Kaggle, set the directory paths accordingly.\n",
-    "train_dir = \"./train_catdog\"  # e.g. './muffin-vs-chihuahua/train'\n",
-    "test_dir = \"./test_catdog\"    # e.g. './muffin-vs-chihuahua/test'"
+    "\n",
+    "# For muffin vs chihuahua version:\n",
+    "train_dir = \"./train\" \n",
+    "test_dir = \"./test\"   \n",
+    "\n",
+    "# For cat vs dog version:\n",
+    "# train_dir = \"./train_catdog\" \n",
+    "# test_dir = \"./test_catdog\"   "
    ]
   },
   {
@@ -66,11 +72,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 10002 images belonging to 2 classes.\n",
-      "Found 2500 images belonging to 2 classes.\n",
-      "Found 2500 images belonging to 2 classes.\n",
-      "Found 2000 images belonging to 2 classes.\n",
-      "Found 2000 images belonging to 2 classes.\n"
+      "Found 3788 images belonging to 2 classes.\n",
+      "Found 945 images belonging to 2 classes.\n",
+      "Found 945 images belonging to 2 classes.\n",
+      "Found 1184 images belonging to 2 classes.\n",
+      "Found 1184 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -187,46 +193,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 399ms/step - accuracy: 0.5158 - loss: 0.7201 - val_accuracy: 0.5648 - val_loss: 0.7061\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 203ms/step - accuracy: 0.6143 - loss: 0.6832 - val_accuracy: 0.7778 - val_loss: 0.5705\n",
       "Epoch 2/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 399ms/step - accuracy: 0.5158 - loss: 0.7201 - val_accuracy: 0.5648 - val_loss: 0.7061\n",
-      "Epoch 2/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 168ms/step - accuracy: 0.5309 - loss: 0.7024 - val_accuracy: 0.5832 - val_loss: 0.6742\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 233ms/step - accuracy: 0.7569 - loss: 0.5446 - val_accuracy: 0.7968 - val_loss: 0.4750\n",
       "Epoch 3/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 168ms/step - accuracy: 0.5309 - loss: 0.7024 - val_accuracy: 0.5832 - val_loss: 0.6742\n",
-      "Epoch 3/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 157ms/step - accuracy: 0.5841 - loss: 0.6852 - val_accuracy: 0.6416 - val_loss: 0.6737\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 247ms/step - accuracy: 0.7878 - loss: 0.4944 - val_accuracy: 0.8497 - val_loss: 0.4071\n",
       "Epoch 4/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 157ms/step - accuracy: 0.5841 - loss: 0.6852 - val_accuracy: 0.6416 - val_loss: 0.6737\n",
-      "Epoch 4/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 165ms/step - accuracy: 0.6201 - loss: 0.6664 - val_accuracy: 0.6780 - val_loss: 0.6184\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 251ms/step - accuracy: 0.8083 - loss: 0.4661 - val_accuracy: 0.8762 - val_loss: 0.3493\n",
       "Epoch 5/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 165ms/step - accuracy: 0.6201 - loss: 0.6664 - val_accuracy: 0.6780 - val_loss: 0.6184\n",
-      "Epoch 5/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 167ms/step - accuracy: 0.6397 - loss: 0.6472 - val_accuracy: 0.6572 - val_loss: 0.6418\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 249ms/step - accuracy: 0.8012 - loss: 0.4784 - val_accuracy: 0.8783 - val_loss: 0.3645\n",
       "Epoch 6/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 167ms/step - accuracy: 0.6397 - loss: 0.6472 - val_accuracy: 0.6572 - val_loss: 0.6418\n",
-      "Epoch 6/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6400 - loss: 0.6533 - val_accuracy: 0.6776 - val_loss: 0.6130\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 216ms/step - accuracy: 0.8105 - loss: 0.4528 - val_accuracy: 0.8709 - val_loss: 0.3627\n",
       "Epoch 7/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6400 - loss: 0.6533 - val_accuracy: 0.6776 - val_loss: 0.6130\n",
-      "Epoch 7/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6563 - loss: 0.6367 - val_accuracy: 0.6896 - val_loss: 0.5996\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 215ms/step - accuracy: 0.8276 - loss: 0.4268 - val_accuracy: 0.8868 - val_loss: 0.3112\n",
       "Epoch 8/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 160ms/step - accuracy: 0.6563 - loss: 0.6367 - val_accuracy: 0.6896 - val_loss: 0.5996\n",
-      "Epoch 8/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 156ms/step - accuracy: 0.6620 - loss: 0.6319 - val_accuracy: 0.6816 - val_loss: 0.6031\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 214ms/step - accuracy: 0.8471 - loss: 0.4078 - val_accuracy: 0.9122 - val_loss: 0.2872\n",
       "Epoch 9/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 156ms/step - accuracy: 0.6620 - loss: 0.6319 - val_accuracy: 0.6816 - val_loss: 0.6031\n",
-      "Epoch 9/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 155ms/step - accuracy: 0.6702 - loss: 0.6226 - val_accuracy: 0.7132 - val_loss: 0.5839\n",
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 279ms/step - accuracy: 0.8487 - loss: 0.3940 - val_accuracy: 0.9111 - val_loss: 0.2721\n",
       "Epoch 10/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 155ms/step - accuracy: 0.6702 - loss: 0.6226 - val_accuracy: 0.7132 - val_loss: 0.5839\n",
-      "Epoch 10/10\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 155ms/step - accuracy: 0.6802 - loss: 0.6127 - val_accuracy: 0.7124 - val_loss: 0.5930\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 155ms/step - accuracy: 0.6802 - loss: 0.6127 - val_accuracy: 0.7124 - val_loss: 0.5930\n",
-      "{'cat': 0, 'dog': 1}\n",
-      "{'cat': 0, 'dog': 1}\n"
+      "\u001b[1m119/119\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 254ms/step - accuracy: 0.8487 - loss: 0.3917 - val_accuracy: 0.9196 - val_loss: 0.2794\n"
      ]
     }
    ],
@@ -236,9 +221,7 @@
     "    train_generator,\n",
     "    epochs=10,\n",
     "    validation_data=val_generator\n",
-    ")\n",
-    "\n",
-    "print(train_generator.class_indices)"
+    ")"
    ]
   },
   {
@@ -251,10 +234,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m63/63\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 261ms/step - accuracy: 0.7145 - loss: 0.5648\n",
-      "Test Accuracy: 0.7145000100135803\n",
-      "\u001b[1m63/63\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 261ms/step - accuracy: 0.7145 - loss: 0.5648\n",
-      "Test Accuracy: 0.7145000100135803\n"
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 98ms/step - accuracy: 0.8818 - loss: 0.3419\n",
+      "Test Accuracy: 0.8817567825317383\n"
      ]
     }
    ],
@@ -280,13 +261,32 @@
    ],
    "source": [
     "# SAVE THE MODEL\n",
-    "# model.save('muffin_vs_chihuahua_cnn.h5')\n",
-    "model.save('exercise_6_catdog_ledesma.h5')"
+    "model.save('exercise_6_trained_model_improved.h5')\n",
+    "# model.save('exercise_6_catdog_ledesma.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "6a79c685",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chihuahua': 0, 'muffin': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is important to map the predicted class indices back to class labels\n",
+    "print(train_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "45472d3e",
    "metadata": {},
    "outputs": [],
@@ -296,25 +296,30 @@
     "# to access the preprocessing utilities to avoid static import resolution issues.\n",
     "image = tf.keras.preprocessing.image\n",
     "\n",
-    "def predict_image(img_path, model_path='exercise_6_catdog_ledesma.h5'):\n",
+    "def predict_image(img_path, model_path='exercise_6_trained_model_improved.h5'): # for muffin vs chihuahua\n",
+    "# def predict_image(img_path, model_path='exercise_6_catdog_ledesma.h5'): # for cat vs dog\n",
     "    model = tf.keras.models.load_model(model_path, compile=False)\n",
     "    img = image.load_img(img_path, target_size=IMG_SIZE)\n",
     "    img_array = image.img_to_array(img) / 255.0\n",
     "    img_array = np.expand_dims(img_array, axis=0)\n",
     "    pred = model.predict(img_array)[0,0]\n",
     "    \n",
-    "    # Updated for cat vs dog classification\n",
-    "    label = \"Dog\" if pred >= 0.5 else \"Cat\"\n",
-    "    print(f\"Prediction: {label} (confidence: {pred:.2f})\")\n",
+    "    # Version: cat vs dog classification\n",
+    "    # Since train_generator.class_indices is {'cat': 0, 'dog': 1}\n",
+    "    # my label layout should be:\n",
+    "    # label = \"Dog\" if pred >= 0.5 else \"Cat\"\n",
+    "    # print(f\"Prediction: {label} (confidence: {pred:.2f})\")\n",
     "    \n",
-    "    # Old muffin vs chihuahua version:\n",
-    "    # label = \"Chihuahua\" if pred >= 0.5 else \"Muffin\"\n",
-    "    # print(f\"Prediction: {label} (confidence: {pred:.2f})\")"
+    "    # Version:  muffin vs chihuahua classification:\n",
+    "    # Since train_generator.class_indices is {'chihuahua': 0, 'muffin': 1}\n",
+    "    # my label layout should be:\n",
+    "    label = \"Muffin\" if pred >= 0.5 else \"Chihuahua\"\n",
+    "    print(f\"Prediction: {label} (confidence: {pred:.2f})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "b340f1d2",
    "metadata": {},
    "outputs": [
@@ -322,21 +327,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 54ms/step\n",
-      "Prediction: Dog (confidence: 0.58)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 64ms/step\n",
+      "Prediction: Muffin (confidence: 0.99)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step\n",
+      "Prediction: Muffin (confidence: 0.96)\n",
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-      "Prediction: Dog (confidence: 0.82)\n",
-      "Prediction: Dog (confidence: 0.58)\n",
+      "Prediction: Muffin (confidence: 0.90)\n",
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
-      "Prediction: Dog (confidence: 0.82)\n"
+      "Prediction: Muffin (confidence: 0.91)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.05)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 60ms/step\n",
+      "Prediction: Chihuahua (confidence: 0.14)\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
-    "predict_image(\"./predict/predict_cat.jpg\")\n",
-    "predict_image(\"./predict/predict_dog.jpg\")"
+    "predict_image(\"./predict/predict_1.jpg\")\n",
+    "predict_image(\"./predict/predict_2.jpg\")\n",
+    "predict_image(\"./predict/predict_3.jpg\")\n",
+    "predict_image(\"./predict/predict_4.jpeg\")\n",
+    "predict_image(\"./predict/predict_5.webp\")\n",
+    "predict_image(\"./predict/predict_6.webp\")"
    ]
   }
  ],
